@@ -41,7 +41,7 @@ truncation_level = 2.0
 maximum_distance = 200.0
 # a wrong parameter on purpose
 mimimum_magnitude = 5
-split_sources = false
+fast_sampling = true
 
 [event_based_params]
 
