@@ -1,4 +1,4 @@
-# mean, investigation_time=50.0, imt="SA(0.1)", checksum=34020974
+# mean, investigation_time=50.0, imt="SA(0.1)", checksum=1461788156
 lon,lat,depth,poe-0.005,poe-0.007,poe-0.0098,poe-0.0137,poe-0.0192,poe-0.0269,poe-0.0376,poe-0.0527,poe-0.0738,poe-0.103,poe-0.145,poe-0.203,poe-0.284,poe-0.397,poe-0.556,poe-0.778,poe-1.09,poe-1.52,poe-2.13
 0.00000,0.00000,0.00000,9.780097E-01,9.618430E-01,9.304209E-01,8.866209E-01,8.233980E-01,7.378233E-01,6.405182E-01,5.367267E-01,4.426179E-01,3.427684E-01,2.515500E-01,1.451092E-01,9.233028E-02,5.900311E-02,4.440584E-02,2.188768E-02,1.049329E-02,3.086261E-03,0.000000E+00
 0.00000,1.00000,0.00000,9.361159E-01,9.182740E-01,8.835312E-01,8.303213E-01,7.726289E-01,6.992842E-01,6.219822E-01,5.391564E-01,4.323672E-01,3.464375E-01,2.425281E-01,1.356662E-01,7.545465E-02,3.310085E-02,2.513464E-02,9.785348E-03,4.938018E-03,4.938018E-03,4.938018E-03
