@@ -1,4 +1,4 @@
-# quantile-0.1, investigation_time=50.0, imt="PGA", checksum=34020974
+# quantile-0.1, investigation_time=50.0, imt="PGA", checksum=1461788156
 lon,lat,depth,poe-0.005,poe-0.007,poe-0.0098,poe-0.0137,poe-0.0192,poe-0.0269,poe-0.0376,poe-0.0527,poe-0.0738,poe-0.103,poe-0.145,poe-0.203,poe-0.284,poe-0.397,poe-0.556,poe-0.778,poe-1.09,poe-1.52,poe-2.13
 0.00000,0.00000,0.00000,7.534030E-01,6.228076E-01,4.908436E-01,3.127107E-01,1.812692E-01,1.175031E-01,7.225651E-02,4.877058E-02,2.469009E-02,2.469009E-02,2.469009E-02,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00
 0.00000,1.00000,0.00000,7.712213E-01,6.988058E-01,5.831380E-01,4.372951E-01,2.953119E-01,2.014838E-01,1.392920E-01,7.225651E-02,2.469009E-02,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00
