@@ -3,7 +3,7 @@
 description = Event Based Risk Lisbon
 
 calculation_mode = event_based_risk
-split_sources = false
+fast_sampling = true
 concurrent_tasks = 16
 random_seed = 23
 
