@@ -1,4 +1,4 @@
-# mean, investigation_time=10.0, imt="SA(0.5)", checksum=82010008
+# mean, investigation_time=10.0, imt="SA(0.5)", checksum=2916048678
 lon,lat,depth,poe-0.0,poe-0.051,poe-0.102,poe-0.153,poe-0.204,poe-0.255,poe-0.306,poe-0.357,poe-0.408,poe-0.459,poe-0.51,poe-0.561,poe-0.612,poe-0.663,poe-0.714,poe-0.765,poe-0.815,poe-0.866,poe-0.917,poe-0.968,poe-1.019,poe-1.07,poe-1.121,poe-1.172,poe-1.223,poe-1.274,poe-1.325,poe-1.376,poe-1.427,poe-1.478,poe-1.529,poe-1.58,poe-1.631,poe-1.682,poe-1.733,poe-1.784,poe-1.835,poe-1.886,poe-1.937,poe-1.988,poe-2.039
 27.26105,38.48514,0.00000,7.142857E-01,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00
 27.31028,37.80813,0.00000,8.948591E-01,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00
